--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "playwright-automation",
+  "type": "module",
+  "name": "bahmni-ui-test-automation",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {},
@@ -8,9 +9,14 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@axe-core/playwright": "^4.9.1",
+    "@eslint/js": "^9.36.0",
     "@playwright/test": "^1.52.0",
     "@types/node": "^24.0.0",
-    "@axe-core/playwright": "^4.9.1"
+    "allure-playwright": "^3.4.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier-plugin-organize-imports": "^4.3.0"
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
