--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@playwright/test": "^1.52.0",
     "@types/node": "^24.0.0",
     "allure-playwright": "^3.4.1",
+    "dotenv": "^17.2.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier-plugin-organize-imports": "^4.3.0"
